--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600&family=Raleway:ital,wght@0,100;0,200;0,400;0,600;1,200&display=swap" rel="stylesheet">
     <title>split fold designe</title>
 </head>
 <body>
-    <section class="hero">
-        <div class="col-1">
+    <h1>hello world!</h1>
+    <section class="hero split-grid">
+        <div class="col">
 
         </div>
-        <div class="col-2">
+        <div class="col hero-bg">
             
         </div>
 
