--- a/index.html
+++ b/index.html
@@ -9,9 +9,60 @@
     <title>split fold designe</title>
 </head>
 <body>
-    <h1>hello world!</h1>
-    <section class="hero split-grid">
-        <div class="col">
+    
+    <section class="hero split-grid ">
+        <div class="col d-flex">
+            <div class="social-sidebar wrapper">
+                <img src="/assets/img/3225183_app_logo_media_popular_social_icon.png" alt="">
+                <img src="/assets/img/3225183_app_logo_media_popular_social_icon.png" alt="">
+
+            </div>
+            <div class="wrapper d-flex f-column space-bertween">
+                <div class="header d-flex h-center">
+                    <div class="logo">
+                        <img src="/assets/img/Logo_Puma.svg" alt="">
+                        
+
+                    </div>
+                    <div class="search">
+                        <p class="m-0">Search</p>
+
+                    </div>
+
+                </div>
+                <div class="hero-copy">
+                    <h2>Design is a jorney of discovery</h2>
+                    <h4>Written by </h4>
+                    <p>Wiljam fernandez, April  05.2007</p>
+                    <a href="">Click here</a>
+                    <a href="">Play me</a>
+
+                </div>
+                <div class="d-flex  social-footer space-bertween h-center">
+                    <div>
+                        <p>1 of 5</p>
+
+                    </div>
+                    <div class="d-flex">
+                    <div class="social-sidebar d-flex h-center">
+                        <img src="/assets/img/299063_heart_icon.png" alt="">
+                        69
+
+                    </div>
+                    <div class="social-sidebar d-flex h-center">
+                        <img src="/assets/img/299063_heart_icon.png" alt="" srcset="">
+                        100
+                    </div>
+
+                    <div class="social-sidebar d-flex h-center">
+                        <img src="/assets/img/299063_heart_icon.png" alt="" srcset="">
+                        zero
+                    </div>
+
+                </div>
+
+                </div>
+            </div>
 
         </div>
         <div class="col hero-bg">
