--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="/assets/img/3225183_app_logo_media_popular_social_icon.png" alt="">
 
             </div>
-            <div class="wrapper d-flex f-column space-bertween">
+            <div class="wrapper d-flex f-column space-between">
                 <div class="header d-flex h-center">
                     <div class="logo">
                         <img src="/assets/img/Logo_Puma.svg" alt="">
@@ -31,14 +31,20 @@
 
                 </div>
                 <div class="hero-copy">
-                    <h2>Design is a jorney of discovery</h2>
-                    <h4>Written by </h4>
-                    <p>Wiljam fernandez, April  05.2007</p>
-                    <a href="">Click here</a>
+                    <h1 class="placeholder">Design</h1>
+                    <h2 id="smaller">Design is a jorney of <span> discovery</span></h2>
+                    <div class="d-flex space-between h-center">
+                        <div>
+                    <span>written by </span>
+                    <p>Wiljam fernandez, <time>April, 05.2007</time>  </p>
+                    <a class="btn btn-secondary" href="">Click here</a>
+                        </div>
+                    
+                    </div>
                     <a href="">Play me</a>
 
                 </div>
-                <div class="d-flex  social-footer space-bertween h-center">
+                <div class="d-flex  social-footer space-between h-center">
                     <div>
                         <p>1 of 5</p>
 
